# zellij

./: Cargo.toml
cmd/: Cargo.toml
cmd/client/: Cargo.toml
cmd/client/src/: commands.rs  main.rs  sessions.rs
cmd/server/: Cargo.toml
cmd/server/src/: init.rs  lib.rs  main.rs
cmd/src/: lib.rs
src/: commands.rs  lib.rs  main.rs  sessions.rs
zellij-client/: Cargo.toml
zellij-client/src/: input_handler.rs  lib.rs  os_input_output.rs  stdin_handler.rs
zellij-server/src/: lib.rs  os_input_output.rs  pty.rs  route.rs  screen.rs
zellij-server/src/plugins/: wasm_bridge.rs
zellij-ssh-server/: Cargo.toml
zellij-ssh-server/src/: handler.rs  main.rs  server.rs  session.rs  ssh.rs  zellij_session.rs
zellij-utils/src/: cli.rs  logging.rs
