[package]
name = "zellij-ssh-server"
version = "0.1.0"
edition = "2021"
description = "The ssh server library for Zellij"
license = "MIT"
homepage = "https://zellij.dev"
rust-version = "1.60"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.75"
async-trait = "0.1.74"
bytes = "1.5.0"
russh = "0.39.0"
russh-keys = "0.38.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["sync"] }
zellij-utils = { path = "../zellij-utils" }
zellij-server-command = { path = "../cmd/server" }
zellij-client-command = { path = "../cmd/client" }
zellij-client = { path = "../zellij-client", version = "0.39.0" }
zellij-server = { path = "../zellij-server", version = "0.39.0" }
names = { version = "0.14.0", default-features = false }
log = "0.4.17"
dialoguer = "0.10.4"
suggest = "0.4.0"
crossbeam-channel = "0.5.8"
mio = { version = "0.8.9", features = ["log", "os-ext", "os-poll"] }
signal-hook = "0.3.17"
interprocess = "1.2.1"
libc = "0.2.149"


[[bin]]
name= "zellij-ssh"
path = "src/main.rs"
