[package]
name = "zellij-server-command"
version = "0.39.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
edition = "2021"
description = "A terminal workspace with batteries included"
license = "MIT"
rust-version = "1.60"

[dependencies]
zellij = { path = "../../"}
zellij-utils = { path = "../../zellij-utils" }
zellij-client = { path = "../../zellij-client", version = "0.39.0" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"

[[bin]]
path = "src/main.rs"
name = "zellij-server"